# programming

./: Makefile  README.md
2048/: main.c
AI/: log.txt  one_max.cpp  tetrisGA.c
BF/: Makefile  README.md  back.cpp  main.c  main.cpp  mp3bf.cpp  test.sh
Bomberman/: Makefile  main.c
Dragon_Quest/: .gitignore  Makefile  README.md  aa.h  battle.c  battle.h  main.c
MineSweeper/: README.md  ms.c
Mineweeper/: Makefile  README.md
Mystery_Dungeon/: Makefile  README.md  main.c  md2.c  md3.c
PuyoPuyo/: Makefile  main.c  puyopuyo.c
Puzzle_and_Dragons/: Makefile  main.c
SAME_GAME/: Makefile
Small_Things/: .gitignore  1-max-sga.c  8th_of_3gen.c  E.c  Makefile  OneMax.c  base64.c  cht.c  curry.c  cursor.c  hello.cgi  hello_cgi.c  method.c  mmap_input_file.txt  mmap_output_file.txt  mmap_read.c  mmap_write.c  monty_hall.cpp  now_loading_face.c  overture.c  perceptron  perceptron.rs  printf_background.c  send_key.c  strcmp.c  tmp.c  triangle.c  trigraph.c
Sokoban/: Makefile  main.c
Web_server/: main.c
Wizardry/: 0_2.h  0_2d.h  10_0.h  10_0d.h  10_1.h  10_1d.h  10_2.h  10_2d.h  11_0.h  11_0d.h  11_1.h  11_1d.h  11_2.h  11_2d.h  11_3.h  11_3d.h  12_0.h  12_0d.h  12_3.h  12_3d.h  13_0.h  13_0d.h  13_1.h  13_1d.h  14_0.h  14_0d.h  14_1.h  14_1d.h  14_3.h  14_3d.h  1_2.h  1_2d.h  2_2.h  2_2d.h  3_0.h  3_0d.h  3_2.h  3_2d.h  3_3.h  3_3d.h  (+46 more)
blog_os/: Cargo.toml
blog_os/src/: main.rs
calculator/: Makefile  cal  cal.c  cal.cs  cal2.c  pn.c  pn20210302.c  rpn20210302.c  test.sh
cat/: cat  cat.c
code_golf/: brainfuck.cpp  triangle.c
columns/: Makefile  main.c
(+255 files in other folders)
