[package]
name = "blog_os"
version = "0.1.0"
authors = ["kmgy"]
edition = "2018"
description = "https://os.phil-opp.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"  # disable stack unwinding on panic

[profile.release]
panic = "abort"  # disable stack unwinding on panic
