[package]
name = "blog_os"
version = "0.1.0"
authors = ["kmgy"]
edition = "2018"
description = "https://os.phil-opp.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"  # disable stack unwinding on panic

[profile.release]
panic = "abort"  # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.8"

[package.metadata.bootimage]
# The command invoked with the created bootimage (the "{}" will be replaced
# with the path to the bootable disk image)
# Applies to `bootimage run` and `bootimage runner`
run-command = ["qemu-system-x86_64.exe", "-drive", "format=raw,file={}"]
